appdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avinash031997
  labels: 
    app: avinash031997
spec:
  replicas: 1
  selector:
    matchLabels:
      app: avinash031997
  template:
    metadata:
      labels:
        app: avinash031997
    spec:
      containers:
      - name: avinash031997
        image: avinash031997/application
        imagePullPolicy: Always
        ports:
        - name: avinash-port
          containerPort: 8080
