dbdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avinash031997-database
  labels: 
    app: avinash031997-db
spec:
  selector:
    matchLabels:
      app: avinash031997
  replicas: 1
  template:
    metadata:
      labels:
        app: avinash031997-db
    spec:
      containers:
      - name: avinash031997
        image: avinash031997/database
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: avinash-database
        ports: vpro-db-data
        - name: vprodb-port
          containerPort: 3306
      volumes:
        - name: vpro-db-data
          persistentVolumeClaim:
            claimName: db-pv-claim
