rmqdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: avinash031997
  labels:
    app: avinash031997
spec:
  selector:
    matchLabels:
      app: avinash031997
  replicas: 1
  template:
    metadata:
      labels:
        app: avinash031997
    spec:
      containers:
      - name: avinash-rabitmq
        image: rabbitmq
        ports:
        - name: avinash-port
          containerPort: 5672
