appservice.yml
apiVersion: v1
kind: Service
metadata:
  name: avinash-app-service
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: avinash-app-service
  type: ClusterIP
