mcservice.yml
apiVersion: v1
kind: Service
metadata:
  name: avinash031997
spec:
  ports:
  - port: 11211
    targetPort: avinash031997/database
    protocol: TCP
  selector:
    app: avinash031997
  type: ClusterIP
