rmqservice.yml
apiVersion: v1
kind: Service
metadata:
  name: avinash031997
spec:
  ports:
  - port: 5672
    targetPort: vpromq01-port
    protocol: TCP
  selector:
    app: vpromq01
  type: ClusterIP
